# open-prover

./: .env.example  .gitignore  .gitmodules  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml  coverage.yml
agent/: Cargo.toml  Makefile  r0_prover_amd64  receipt0  receipt1  segment  snark_setup.sh
agent/metadata/: lifted_receipt.json  lifted_receipts.json  resolved_receipt.json  root_receipt.json  segments_0.json
agent/metadata/keccak/: unioned_receipt.json
agent/metadata/result/: finalized_receipt.json  stark.json
agent/python/: loader.py  orchestrator.py  runner.py
agent/python/common/: types.py
agent/python/models/: model.py  verify.py
agent/python/tasks/: base.py  finalize.py  join.py  keccak.py  prove.py  resolve.py  snark.py  task_registry.py  task_runner.py  test.py  union.py
agent/scripts/: build_all.sh
agent/src/: lib.rs
agent/src/command/: mod.rs  registry.rs  runner.rs
agent/src/e2e/: e2e.rs  mod.rs  snark.rs  stark.rs
agent/src/io/: mod.rs
agent/src/io/input/: env.rs  shmem.rs  stdin.rs
agent/src/tasks/: factory.rs  mod.rs  r0.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/io/: mod.rs  socket.rs
common/src/io/input/: env.rs  mod.rs  shmem.rs  stdin.rs
common/src/serialization/: bincode.rs  json_bytes.rs  mod.rs  mpk.rs
common/src/storage/: fs_storage.rs  mod.rs
common/src/uri/: data_uri.rs  http_uri.rs  mod.rs  resolver.rs  storage_uri.rs
risc0/: Cargo.toml  Makefile  build.rs
risc0/metadata/: lifted_receipts.json  root_receipt.json
risc0/metadata/keccak/: unioned_receipt.json
risc0/metadata/result/: finalized_receipt.json
risc0/metadata/session/: session_1_segments.json
risc0/proto/: risc0.proto
risc0/src/: lib.rs
risc0/src/command/: registry.rs
risc0/src/e2e/: mod.rs  snark.rs  stark.rs
risc0/src/server/: grpc_server.rs  grpc_service.rs  mod.rs  path.rs
risc0/src/tasks/: execute.rs  factory.rs  finalize.rs  join.rs  keccak.rs  mod.rs  prove.rs  r0.rs  resolve.rs  stark2snark.rs  union.rs
risc0/tests/: generate_fixtures.rs
sp1/: Cargo.toml  Makefile  snark_setup.sh
sp1/metadata/elf/: fibonacci-elf  keccak-elf
sp1/src/: lib.rs
sp1/src/command/: registry.rs
sp1/src/e2e/: compressed.rs  core.rs  groth16.rs  mod.rs  plonk.rs  shrink.rs  wrap.rs
sp1/src/tasks/: agent.rs  cpu_agent.rs  factory.rs  gpu_agent.rs  mod.rs  prove.rs  recursion.rs  setup.rs  shards.rs  shrink_wrap.rs  snark.rs
tools/risc0-fixtures/: Cargo.toml  README.md
tools/risc0-fixtures/src/: main.rs
