[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
tracing = "0.1.41"
risc0-zkvm = { version = "3.0.0-rc.1", default-features = false, features = ["prove","unstable"] }
memmap2 = "0.9.5"
tracing-subscriber = "0.3.19"
serde = { version = "1.0.219", features = ["derive"] }
bincode = "1.3"
serde_json = "1.0.140"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1

[features]
default = []