[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
tracing = "0.1.41"
risc0-zkvm = { git = "ssh://git@github.com/zk-rabbit/risc0.git", tag = "v3.0.0-rc.1", default-features = false, features = ["prove", "unstable"] }
memmap2 = "0.9.5"
tracing-subscriber = "0.3.19"
serde = { version = "1.0.219", features = ["derive"] }
bincode = "1.3"
serde_json = "1.0.140"
rayon = "1.10.0"
hex = "0.4.3"
tempfile = "3.20.0"
nix = { version = "0.29", features = ["fs"] }
tokio = { version = "1.44.2", features = ["process", "rt", "rt-multi-thread", "macros"] }
async-trait = "0.1.88"

[features]
default = []
cuda = ["risc0-zkvm/cuda"]