[package]
name = "common"
version = "0.1.0"
edition = "2024"

[lib]
name = "common"

[dependencies]
anyhow = "1.0"
memmap2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3.0"
bincode = "1.3"
tracing = "0.1.41"
tempfile = "3.20.0"
serde_bytes = "0.11.17"
async-trait = "0.1.89"
tokio = { version = "1.48.0", features = ["fs", "macros", "rt-multi-thread"] }
