[package]
name = "risc0"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
tracing = "0.1.41"
risc0-zkvm = { version = "=3.0.3", default-features = false, features = ["prove", "unstable"] }
tracing-subscriber = "0.3.19"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
hex = "0.4.3"
tempfile = "3.20.0"
tokio = { version = "1.44.2", features = ["process", "rt", "rt-multi-thread", "macros"] }
common = { path = "../common" }
tonic = "0.14"
prost = "0.14"
tonic-prost = "0.14"

[build-dependencies]
tonic-prost-build = "0.14"

[features]
default = []
cuda = ["risc0-zkvm/cuda"]
