[package]
name = "sp1"
version = "0.1.0"
edition = "2024"

[dependencies]
# sp1
sp1-core-executor = { git = "https://github.com/succinctlabs/sp1.git", branch = "dev" }
sp1-core-machine = { git = "https://github.com/succinctlabs/sp1.git", branch = "dev", features = ["bigint-rug"] }
sp1-prover = { git = "https://github.com/succinctlabs/sp1.git", branch = "dev" }
sp1-recursion-circuit = { git = "https://github.com/succinctlabs/sp1.git", branch = "dev" }
sp1-recursion-compiler = { git = "https://github.com/succinctlabs/sp1.git", branch = "dev" }
sp1-recursion-core = { git = "https://github.com/succinctlabs/sp1.git", branch = "dev" }
sp1-recursion-gnark-ffi = { git = "https://github.com/succinctlabs/sp1.git", branch = "dev", features = ["native"] }
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", branch = "dev" }
sp1-stark = { git = "https://github.com/succinctlabs/sp1.git", branch = "dev" }

# moongate
moongate-prover = { git = "https://github.com/succinctlabs/moongate", branch = "cluster" }
moongate-core = { git = "https://github.com/succinctlabs/moongate", branch = "cluster" }

# p3
p3-field = { version = "=0.2.3-succinct" }
p3-matrix = { version = "=0.2.3-succinct" }
p3-merkle-tree = { version = "=0.2.3-succinct" }
p3-baby-bear = { version = "=0.2.3-succinct" }

# etc
tracing = "0.1.41"
anyhow = "1.0.98"
tracing-subscriber = "0.3.19"
tokio = { version = "1.47.1", features = ["full"] }
common = { path = "../common" }
cfg-if = "1.0.1"
serde_bytes = "0.11.17"

[features]
gpu = ["sp1-sdk/cuda"]

[[bin]]
name = "sp1"
path = "src/bin/sp1.rs"

[[bin]]
name = "sp1_socket_server"
path = "src/bin/sp1_socket_server.rs"
