[package]
name = "sp1"
version = "0.1.0"
edition = "2024"

[dependencies]
# sp1
sp1-core-executor = { version = "5.2.1" }
sp1-core-machine = { version = "5.2.1", features = ["bigint-rug"] }
sp1-prover = { version = "5.2.1" }
sp1-recursion-circuit = { version = "5.2.1" }
sp1-recursion-compiler = { version = "5.2.1" }
sp1-recursion-core = { version = "5.2.1" }
sp1-recursion-gnark-ffi = { version = "5.2.1", features = ["native"] }
sp1-sdk = { version = "5.2.1" }
sp1-stark = { version = "5.2.1" }

# sp1-gpu
moongate-prover = { git = "https://github.com/succinctlabs/sp1-gpu", rev = "ef5b821ccd0bfc723d952506faf66dd5b4ca2e45", optional = true }
moongate-core = { git = "https://github.com/succinctlabs/sp1-gpu", rev = "ef5b821ccd0bfc723d952506faf66dd5b4ca2e45", optional = true }

# p3
p3-field = { version = "=0.2.3-succinct" }
p3-matrix = { version = "=0.2.3-succinct" }
p3-merkle-tree = { version = "=0.2.3-succinct" }
p3-baby-bear = { version = "=0.2.3-succinct" }
p3-challenger = { version = "=0.2.3-succinct" }

# etc
tracing = "0.1.41"
anyhow = "1.0.98"
tracing-subscriber = "0.3.19"
tokio = { version = "1.47.1", features = ["full"] }
common = { path = "../common" }
cfg-if = "1.0.1"
serde_bytes = "0.11.17"
bytemuck = { version = "1.13.1", features = ["derive"], optional = true }
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.18.1", features = ["v7"] }

[features]
default = []
# Enable GPU support via sp1-gpu
cuda = ["dep:moongate-core", "dep:moongate-prover"]
