[package]
name = "risc0-fixtures"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../../common" }
risc0 = { path = "../../risc0" }
risc0-zkvm = { version = "=3.0.3", default-features = false, features = ["prove", "unstable"] }
risc0-zkvm-methods = { git = "https://github.com/risc0/risc0.git", tag = "v3.0.3" }
anyhow = "1.0.98"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
